[project]
name = "highway-env-project"
version = "0.1.0"
description = "Final Project for the RL course"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[other]>=1.2.3",
    "highway-env>=1.10.2",
    "moviepy>=2.2.1",
    "notebook>=7.5.3",
    "setuptools>=82.0.0",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
]
